deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: titanic-predictor
  namespace: mlops-dev
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: titanic-predictor
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: http
